--- a/templates/base.html
+++ b/templates/base.html
@@ -49,33 +49,43 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    {# SINGLE LINE IF STATEMENT TO PREVENT SYNTAX ERROR #}
-                    {% if request.resolver_match.url_name == 'login' or request.resolver_match.url_name == 'office_login' %}
+                    {% if request.resolver_match.url_name == 'login' or request.resolver_match.url_name == 'office_login' or request.resolver_match.url_name == 'admin_login' %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'landing' %}"><i class="bi bi-house-door me-1"></i>Home</a>
                     </li>
                     {% endif %}
 
                     {% if user.is_authenticated %}
-                        {% if user.is_staff %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'office_dashboard' %}">Office Dashboard</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'office_fe_data' %}">Field Engineer</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'office_installer_data' %}">Installation</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'enquiry_list' %}">Enquiries</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'office_workers_profiles' %}">Workers Profiles</a></li>
-                        {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
+                    <!-- ADMIN -->
+                    {% if user.is_staff %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'admin_dashboard' %}">Admin Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'office_fe_data' %}">Field Engineer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'office_installer_data' %}">Installation</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'enquiry_list' %}">Enquiries</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'office_workers_profiles' %}">Workers
+                            Profiles</a></li>
 
-                        {% if user.groups.all.0.name == 'Field_Engineers' %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'create_survey' %}">New Survey</a></li>
-                        {% endif %}
+                    <!-- NEW OFFICE ROLE (Check Group) -->
+                    {% elif user.groups.all.0.name == 'Office_Staff' %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'office_dashboard' %}">Office Dashboard</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'enquiry_list' %}">Enquiries</a></li>
 
-                        {% if user.groups.all.0.name == 'Installers' %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Installation</a></li>
-                        {% endif %}
+                    <!-- FE & INSTALLER -->
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
 
-                        <li class="nav-item"><a class="nav-link" href="{% url 'enquiry_list' %}">Enquiries</a></li>
-                        {% endif %}
+                    {% if user.groups.all.0.name == 'Field_Engineers' %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'create_survey' %}">New Survey</a></li>
+                    {% endif %}
+
+                    {% if user.groups.all.0.name == 'Installers' %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Installation</a></li>
+                    {% endif %}
+
+                    <li class="nav-item"><a class="nav-link" href="{% url 'enquiry_list' %}">Enquiries</a></li>
+                    {% endif %}
                     {% endif %}
                 </ul>
 
